add_mlir_unittest(GCExecutionEngineTests
  JitWrapper.cpp
)
target_link_libraries(GCExecutionEngineTests
  PRIVATE
  GCJitWrapper
  GCCpuRuntime
  MLIROneDNNGraph
  MLIRCPURuntimeDialect
  GCPasses
  MLIRCPURuntimeTransforms
  MLIRMicrokernel 
  MLIRMicrokernelTransforms 
  GCMLIRUtils 
  MLIRLinalgx 
  GCPasses 
  GCAnalysis 
  MLIRLinalgxTransforms)
